2018-08-10  Ross Kirsling  <ross.kirsling@sony.com>

        [WinCairo] Unreviewed layout test gardening.

        * platform/wincairo/TestExpectations:
        * platform/wincairo/editing/selection/5057506-expected.png: Added.
        * platform/wincairo/editing/selection/caret-ltr-right-expected.txt:
        * platform/wincairo/editing/selection/caret-rtl-right-expected.txt:
        * platform/wincairo/editing/selection/doubleclick-crash-expected.txt: Added.
        * platform/wincairo/editing/selection/editable-links-expected.txt: Added.
        * platform/wincairo/editing/selection/extend-by-character-006-expected.txt: Added.
        * platform/wincairo/editing/selection/extend-by-sentence-001-expected.txt: Added.
        * platform/wincairo/editing/selection/extend-by-word-001-expected.txt: Added.
        * platform/wincairo/editing/selection/extend-inside-transforms-backward-expected.txt: Added.
        * platform/wincairo/editing/selection/extend-inside-transforms-forward-expected.txt: Added.
        * platform/wincairo/editing/selection/extend-selection-bidi-expected.txt: Added.
        * platform/wincairo/editing/selection/focus-body-expected.txt: Added.
        * platform/wincairo/editing/selection/move-by-line-001-expected.txt: Added.
        * platform/wincairo/editing/selection/move-by-word-001-expected.txt: Added.
        * platform/wincairo/editing/selection/select-all-001-expected.txt: Added.
        * platform/wincairo/editing/selection/select-all-002-expected.txt: Added.
        * platform/wincairo/editing/selection/select-all-003-expected.txt: Added.
        * platform/wincairo/editing/selection/select-all-004-expected.txt: Added.
        * platform/wincairo/editing/selection/unrendered-001-expected.txt: Added.
        * platform/wincairo/editing/selection/unrendered-002-expected.txt: Added.
        * platform/wincairo/editing/selection/unrendered-003-expected.txt: Added.