@@ -226,7 +226,8 @@ class TestExpectationParser(object):
 
     # FIXME: Update the original modifiers and remove this once the old syntax is gone.
     _configuration_tokens_list = [
-        'Mac', 'SnowLeopard', 'Lion', 'MountainLion', 'Mavericks', 'Yosemite', 'ElCapitan', 'Sierra', 'HighSierra', 'Mojave',
+        'SnowLeopard', 'Lion', 'MountainLion', 'Mavericks', 'Yosemite', 'ElCapitan', # Legacy macOS
+        'Mac', 'Sierra', 'HighSierra', 'Mojave',
         'Win', 'XP', 'Vista', 'Win7',
         'Linux',
         'Android',
